Changed Admin implementation and add test cases for AdminService.java